--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -15,7 +15,7 @@ env:
                                                # containerDefinitions section of your task definition
 
 permissions:
-  contents: read
+  contents: write #read
 
 jobs:
   deploy:
@@ -34,7 +34,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
         port: 22
-        endpoint: "https://s3.amazonaws.com"
+        #endpoint: "https://s3.amazonaws.com"
 
     - name: Login to Amazon ECR
       id: login-ecr
