--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,12 +6,16 @@ on:
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}       # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+  SSH_PRIVATE_KEY: ${ { secrets.AWS_SSH_KEY_PEM }}
+  REMOTE_HOST: ${ { secrets.AWS_INSTANCE_DNS }}
+  REMOTE_USER: ${ { secrets.AWS_INSTANCE_USER }}
+  TARGET: ${ { secrets.AWS_INSTANCE_TARGET_FOLDER }}
+  #ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
+  #ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
+  #ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
+  #ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
+  #CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
