--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,12 +5,12 @@ on:
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}       # set this to your preferred AWS region, e.g. us-west-1
-  #ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  #ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  #ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  #ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
+  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  #CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
+  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
@@ -34,15 +34,15 @@ jobs:
         REMOTE_USER: ${ { secrets.AWS_INSTANCE_USER }}
         TARGET: ${ { secrets.AWS_INSTANCE_TARGET_FOLDER }}
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: "us-east-1c"
-        #aws-region: ${{ secrets.AWS_REGION }}
-        port: 22
-        #endpoint: "https://s3.amazonaws.com"
+    #- name: Configure AWS credentials
+    #  uses: aws-actions/configure-aws-credentials@v1
+    #  with:
+    #    aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #    aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #    aws-region: "us-east-1c"
+    #    #aws-region: ${{ secrets.AWS_REGION }}
+    #    port: 22
+    #    #endpoint: "https://s3.amazonaws.com"
 
     - name: Login to Amazon ECR
       id: login-ecr
