--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,7 +21,7 @@ jobs:
           aws-access-key-id: '${{ secrets.AWS_ACCESS_KEY_ID }}'
           aws-secret-access-key: '${{ secrets.AWS_SECRET_ACCESS_KEY }}'
           #aws-region: '${{ secrets.AWS_REGION }}'
-          aws-region: 'us-east-1'
+          aws-region: 'us-east-1c'
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
