--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,3 +24,19 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+          
+
+      - name: ls -a via ssh
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: ls -a
+          host: ${{ secrets.AWS_INSTANCE_IP }}
+          username: ${{ secrets.AWS_INSTANCE_USER }}
+          #passphrase: ${{ secrets.PASSPHRASE }}
+          privateKey: ${{ secrets.AWS_SSH_KEY_PPK}}          
+#mkdir -p ~/server/
+#cd ~/server/
+#sudo rm Dockerfile
+#sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
+#sudo docker build .
+#sudo docker run -d -p 80:80 06d5a6306104
