--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -29,15 +29,15 @@ jobs:
       - name: ls -a via ssh
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: ls -a
+          command: |
+            mkdir -p ~/server/
+            cd ~/server/
+            sudo rm Dockerfile
+            sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
+            sudo docker build .
+            sudo docker run -d -p 80:80 06d5a6306104
           host: ${{ secrets.AWS_INSTANCE_IP }}
           username: ${{ secrets.AWS_INSTANCE_USER }}
           #passphrase: ${{ secrets.PASSPHRASE }}
           #privateKey: ${{ secrets.AWS_SSH_KEY_PPK}}   
           privateKey: ${{ secrets.AWS_SSH_KEY_PEM}}
-#mkdir -p ~/server/
-#cd ~/server/
-#sudo rm Dockerfile
-#sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
-#sudo docker build .
-#sudo docker run -d -p 80:80 06d5a6306104
