--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,23 +1,19 @@
-name: startMagent2DevEC2
-# Controls when the action will run. 
-# This code is set up only to run when you click action in the repository, If you require to run on a push or cron edit below
+name: AwsEC2
+
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  # push:
-  #  branches: [ main ]
-  # Allows you to run this workflow manually from the Actions tab
+
   workflow_dispatch:
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
+
   build:
-# The type of runner that the job will run on
+
     runs-on: ubuntu-latest
-# Below this are each of the steps that are run
+
     steps:
-# Name of step
+
       - name: Start AWS EC2
-        # Run AWS Command on the GitHub Hosted runner which starts the instance using AWS authentication stored in GitHub Secrets (see below how to add)
+
         run: |
           aws ec2 start-instances --instance-ids ${{secrets.AWS_INSTANCE_ID }}
         env:
@@ -25,7 +21,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
           
-      - name: Deploy to Staging server
+      - name: SSH Connect
         uses: easingthemes/ssh-deploy@main
         env:
           #SSH_PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY_PPK }}
