--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -29,20 +29,9 @@ jobs:
             key: ${{ secrets.AWS_SSH_KEY_PEM }}
             port: ${{ secrets.AWS_INSTANCE_SSH_PORT }}
             script: | 
-              echo "oi";    
-          #EXCLUDE: "/dist/, /node_modules/"
-      #- name: ls -a via ssh
-      #  uses: garygrossgarten/github-action-ssh@release
-      #  with:
-      #    command: |
-      #      mkdir -p ~/server/
-      #      cd ~/server/
-      #      sudo rm Dockerfile
-      #      sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
-      #      sudo docker build .
-      #      sudo docker run -d -p 80:80 06d5a6306104
-      #    host: ${{ secrets.AWS_INSTANCE_IP }}
-      #    username: ${{ secrets.AWS_INSTANCE_USER }}
-          #passphrase: ${{ secrets.PASSPHRASE }}
-          #privateKey: ${{ secrets.AWS_SSH_KEY_PPK}}   
-      #    privateKey: ${{ secrets.AWS_SSH_KEY_PEM}}
+              sudo rm -rf ~/${{ github.event.repository.name }}
+              mkdir -p ~/${{ github.event.repository.name }}
+              cd ~/${{ github.event.repository.name }}
+              sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
+              sudo docker build . -t ${{ github.event.repository.name }}
+              sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
