--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,5 +33,5 @@ jobs:
               mkdir -p ~/${{ github.event.repository.name }}
               cd ~/${{ github.event.repository.name }}
               sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
-              sudo docker build . -t ${{ github.event.repository.name }}
+              sudo docker build -t ${{ github.event.repository.name }} .
               sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
