--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,6 +33,7 @@ jobs:
               mkdir -p ~/${{ github.event.repository.name }}
               sudo chmod 7777 ~/${{ github.event.repository.name }}
               cd ~/${{ github.event.repository.name }}
+              sudo rm -rf Dockerfile
               sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
               sudo docker build -t ${{ github.event.repository.name }} .
               sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
