--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,6 +34,6 @@ jobs:
               sudo chmod 7777 ~/${{ github.event.repository.name }}
               cd ~/${{ github.event.repository.name }}
               sudo rm -rf Dockerfile
-              sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
+              wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
               sudo docker build -t ${{ github.event.repository.name }} .
               sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
