--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -29,11 +29,19 @@ jobs:
             key: ${{ secrets.AWS_SSH_KEY_PEM }}
             port: ${{ secrets.AWS_INSTANCE_SSH_PORT }}
             script: | 
-              #echo "stop all containers:"
-              #sudo docker stop $(docker ps -a -q)
+              sudo rm -rf /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              mkdir -p /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              sudo chmod 7777 /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              cd /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              sudo rm -rf /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
+              wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
 
-              #echo "stop all containers by force"
-              #sudo docker kill $(docker ps -q)
+              sudo docker build -t ${{ github.event.repository.name }} .
+              echo "stop all containers:"
+              sudo docker stop $(docker ps -a -q)
+
+              echo "stop all containers by force"
+              sudo docker kill $(docker ps -q)
 
               #echo "remove all containers"
               #sudo docker rm $(docker ps -a -q)
@@ -44,11 +52,5 @@ jobs:
               #echo "purge the rest"
               #sudo docker system prune --all --force --volumes
 
-              sudo rm -rf /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
-              mkdir -p /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
-              sudo chmod 7777 /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
-              cd /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
-              sudo rm -rf Dockerfile
-              wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile
-              sudo docker build -t ${{ github.event.repository.name }} .
+
               sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
