--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,11 +30,27 @@ jobs:
             port: ${{ secrets.AWS_INSTANCE_SSH_PORT }}
             script: | 
               sudo rm -rf /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              echo "remove folder"
               mkdir -p /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              echo "create folder"
               sudo chmod 7777 /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              echo "permission folder"
               cd /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}
+              echo "access folder"
               sudo rm -rf /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
+              echo "remove Dockerfile"
               sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
+              echo "download Dockerfile"
+
+              docker container stop ${{ github.event.repository.name }} 
+              echo "stop container"
+              docker kill  ${{ github.event.repository.name }} 
+              echo "kill container"
+
+              sudo docker build -t ${{ github.event.repository.name }} .
+              echo "build container"
+              sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
+              echo "run container"
 
               #echo "stop all containers:"
               #sudo docker stop $(docker ps -a -q)
@@ -49,9 +65,3 @@ jobs:
 
               #echo "purge the rest"
               #sudo docker system prune --all --force --volumes
-
-              docker container stop ${{ github.event.repository.name }} 
-              docker kill  ${{ github.event.repository.name }} 
-
-              sudo docker build -t ${{ github.event.repository.name }} .
-              sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
