--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -145,7 +145,7 @@ jobs:
 
               sudo docker build -t ${{ github.event.repository.name }} .
               echo "build container"
-              sudo docker run --name ${{ github.event.repository.name }}_run -d -p 80:80 ${{ github.event.repository.name }}
+              sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
               echo "run container"
 
               #echo "stop all containers:"
