--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -29,8 +29,7 @@ jobs:
             key: ${{ secrets.AWS_SSH_KEY_PEM }}
             port: ${{ secrets.AWS_INSTANCE_SSH_PORT }}
             script: | 
-              
-			  echo "stop all containers:"
+              echo "remove all containers"
               sudo docker stop $(docker ps -a -q)
               echo "stop all containers by force"
               sudo docker kill $(docker ps -q)
