--- a/.github/workflows/installPrometheus.yml
+++ b/.github/workflows/installPrometheus.yml
@@ -33,17 +33,18 @@ jobs:
             script: | 
               apt-get update
               echo "update system"
+              sudo apt install net-tools
               netstat -nl | grep 9323
-              groupadd --system prometheus
+              sudo groupadd --system prometheus
               echo "test port prometheus docker"
-              useradd -s /bin/false -r -g prometheus prometheus
+              sudo useradd -s /bin/false -r -g prometheus prometheus
               echo "add group sudo user prometheus"
-              mkdir -p /etc/prometheus
-              mkdir -p /var/lib/prometheus
+              sudo mkdir -p /etc/prometheus
+              sudo mkdir -p /var/lib/prometheus
               echo "create folder prometheus"
-              sudo mkdir /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/downloads/prometheus -p
+              sudo mkdir -p /home/${{ secrets.AWS_INSTANCE_USER }}/downloads/prometheus 
               echo "create folder download"
-              cd /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/downloads/prometheus -p
+              cd /home/${{ secrets.AWS_INSTANCE_USER }}/downloads/prometheus -p
               echo "open folder download"
               wget https://github.com/prometheus/prometheus/releases/download/v2.8.0/prometheus-2.8.0.linux-amd64.tar.gz
               echo "prometheus download"
@@ -51,19 +52,20 @@ jobs:
               echo "extract download"
               cd prometheus-2.8.0.linux-amd64/
               echo "open download"
-              install prometheus /usr/local/bin/
+              sudo install prometheus /usr/local/bin/
               echo "install prometheus"
-              install promtool /usr/local/bin/
+              sudo install promtool /usr/local/bin/
               echo "install promtool"
-              mv consoles /etc/prometheus/
+              sudo mv consoles /etc/prometheus/
               echo "move folder"
-              mv console_libraries /etc/prometheus/
+              sudo mv console_libraries /etc/prometheus/
               echo "move folder"
               cd /etc/prometheus
               echo "open prometheus folder"
               sudo rm -rf /etc/prometheus/prometheus.yml
               echo "config prometheus"
               sudo touch /etc/prometheus/prometheus.yml
+              sudo chmod 777  /etc/prometheus/prometheus.yml
               echo "global:" >> /etc/prometheus/prometheus.yml
               echo "  scrape_interval: 15s" >> /etc/prometheus/prometheus.yml
               echo 'scrape_configs:' >> /etc/prometheus/prometheus.yml
@@ -73,28 +75,30 @@ jobs:
               echo "      - targets: ['localhost:9090']" >> /etc/prometheus/prometheus.yml
               echo "  - job_name: 'docker'" >> /etc/prometheus/prometheus.yml
               echo "    static_configs:" >> /etc/prometheus/prometheus.yml
-              echo "      - targets: ['${{ secrets.AWS_INSTANCE_IP }}']" >> /etc/prometheus/prometheus.yml
+              #echo "      - targets: ['${{ secrets.AWS_INSTANCE_IP }}']" >> /etc/prometheus/prometheus.yml
+              #echo "      - targets: ['"${{ secrets.AWS_INSTANCE_IP }}"']" >> /etc/prometheus/prometheus.yml
+              echo "      - targets: ['54.166.21.114']" >> /etc/prometheus/prometheus.yml
               echo "edit file config prometheus"
-              prometheus --config.file /etc/prometheus/prometheus.yml --storage.tsdb.path /var/lib/prometheus/ --web.console.templates=/etc/prometheus/consoles --web.console.libraries=/etc/prometheus/console_libraries
+              sudo prometheus --config.file /etc/prometheus/prometheus.yml --storage.tsdb.path /var/lib/prometheus/ --web.console.templates=/etc/prometheus/consoles --web.console.libraries=/etc/prometheus/console_libraries
               echo "active file config prometheus"
-              chown prometheus:prometheus /usr/local/bin/prometheus
-              chown prometheus:prometheus /usr/local/bin/promtool
-              chown prometheus:prometheus /var/lib/prometheus -R
-              chown prometheus:prometheus /var/lib/prometheus -R
-              chmod -R 775 /etc/prometheus/ /var/lib/prometheus/
+              sudo chown prometheus:prometheus /usr/local/bin/prometheus
+              sudo chown prometheus:prometheus /usr/local/bin/promtool
+              sudo chown prometheus:prometheus /var/lib/prometheus -R
+              sudo chmod -R 775 /etc/prometheus/ /var/lib/prometheus/
               sudo rm -rf /etc/systemd/system/prometheus.service
               sudo touch /etc/systemd/system/prometheus.service
-              echo "[Unit]" >> /etc/systemd/system/prometheus.service
-              echo "Description=Prometheus" >> /etc/systemd/system/prometheus.service
-              echo "Wants=network-online.target" >> /etc/systemd/system/prometheus.service
-              echo "After=network-online.target" >> /etc/systemd/system/prometheus.service
-              echo "" >> /etc/systemd/system/prometheus.service
-              echo "[Service]" >> /etc/systemd/system/prometheus.service
-              echo "User=prometheus" >> /etc/systemd/system/prometheus.service
-              echo "Group=prometheus" >> /etc/systemd/system/prometheus.service
-              echo "Type=simple" >> /etc/systemd/system/prometheus.service
-              echo "ExecStart=/usr/local/bin/prometheus --config.file /etc/prometheus/prometheus.yml --storage.tsdb.path /var/lib/prometheus/ --web.console.templates=/etc/prometheus/consoles --web.console.libraries=/etc/prometheus/console_libraries" >> /etc/systemd/system/prometheus.service
-              echo "" >> /etc/systemd/system/prometheus.service
+              sudo chmod 7777 /etc/systemd/system/prometheus.service
+              sudo echo "[Unit]" >> /etc/systemd/system/prometheus.service
+              sudo echo "Description=Prometheus" >> /etc/systemd/system/prometheus.service
+              sudo echo "Wants=network-online.target" >> /etc/systemd/system/prometheus.service
+              sudo echo "After=network-online.target" >> /etc/systemd/system/prometheus.service
+              sudo echo "" >> /etc/systemd/system/prometheus.service
+              sudo echo "[Service]" >> /etc/systemd/system/prometheus.service
+              sudo echo "User=prometheus" >> /etc/systemd/system/prometheus.service
+              sudo echo "Group=prometheus" >> /etc/systemd/system/prometheus.service
+              sudo echo "Type=simple" >> /etc/systemd/system/prometheus.service
+              sudo echo "ExecStart=/usr/local/bin/prometheus --config.file /etc/prometheus/prometheus.yml --storage.tsdb.path /var/lib/prometheus/ --web.console.templates=/etc/prometheus/consoles --web.console.libraries=/etc/prometheus/console_libraries" >> /etc/systemd/system/prometheus.service
+              sudo echo "" >> /etc/systemd/system/prometheus.service
               echo "[Install]" >> /etc/systemd/system/prometheus.service
               echo "WantedBy=multi-user.target" >> /etc/systemd/system/prometheus.service
               echo "SyslogIdentifier=prometheus" >> /etc/systemd/system/prometheus.service
