--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -39,7 +39,7 @@ jobs:
               echo "access folder"
               sudo rm -rf /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
               echo "remove Dockerfile"
-              sudo wget https://raw.githubusercontent.com/luiz0067yahoo/boracomer/main/Dockerfile /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
+              sudo wget https://raw.githubusercontent.com/luiz0067yahoo/${{ github.event.repository.name }}/main/Dockerfile /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
               echo "download Dockerfile"
 
               docker container stop ${{ github.event.repository.name }} 
@@ -49,7 +49,7 @@ jobs:
 
               sudo docker build -t ${{ github.event.repository.name }} .
               echo "build container"
-              sudo docker run -d -p 80:80 ${{ github.event.repository.name }}
+              sudo docker run -d -p 80:80 ${{ github.event.repository.name }} --name ${{ github.event.repository.name }}
               echo "run container"
 
               #sudo docker exec –it boracomer /bin/bash
