--- a/.github/workflows/Install_docker_aws_ec2.yml
+++ b/.github/workflows/Install_docker_aws_ec2.yml
@@ -29,18 +29,19 @@ jobs:
             key: ${{ secrets.AWS_SSH_KEY_PEM }}
             port: ${{ secrets.AWS_INSTANCE_SSH_PORT }}
             script: | 
-              apt-get update
+              sudo apt-get update
               echo "update system"
-              apt-get install docker.io
+              sudo apt-get install docker.io
               echo "install docker"
               sudo rm -rf /etc/docker/daemon.json
               echo "config docker"
               sudo touch /etc/docker/daemon.json
+              sudo chmod 777 /etc/docker/daemon.json
               sudo echo '{' >> /etc/docker/daemon.json
               sudo echo '"metrics-addr" : "0.0.0.0:9323",' >> /etc/docker/daemon.json
               sudo echo '"experimental" : true' >> /etc/docker/daemon.json
               sudo echo '}' >> /etc/docker/daemon.json
               echo "edit file config docker"
-              service docker restart
+              sudo service docker restart
               echo "restart docker"
               #sudo dockerd
