--- a/.github/workflows/create_container_docker_aws_ec2.yml
+++ b/.github/workflows/create_container_docker_aws_ec2.yml
@@ -1,4 +1,4 @@
-name: AwsEC2
+name: CreateContainerDockerAwsEC2
 
 on:
 
@@ -39,7 +39,10 @@ jobs:
               echo "access folder"
               sudo rm -rf /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
               echo "remove Dockerfile"
-              sudo wget https://raw.githubusercontent.com/luiz0067yahoo/${{ github.event.repository.name }}/main/Dockerfile /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
+              #git config --global user.email "${GH_USERNAME}@users.noreply.github.com"
+              #git config --global user.name "${GH_USERNAME}"
+
+              sudo wget https://github.com/${{ github.actor }}/${{ github.event.repository.name }}/blob/master/Dockerfile /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
               echo "download Dockerfile"
 
               docker container stop ${{ github.event.repository.name }} 
@@ -49,8 +52,7 @@ jobs:
 
               sudo docker build -t ${{ github.event.repository.name }} .
               echo "build container"
-              sudo docker run -d -p 80:80 ${{ github.event.repository.name }} --name ${{ github.event.repository.name }}
+              sudo docker run -d -p 3000:3000 ${{ github.event.repository.name }} --name ${{ github.event.repository.name }}
               echo "run container"
 
-              #sudo docker exec –it boracomer /bin/bash
-
+              #sudo docker exec –it ${{ github.event.repository.name }} /bin/bash
