--- a/.github/workflows/create_container_docker_aws_ec2.yml
+++ b/.github/workflows/create_container_docker_aws_ec2.yml
@@ -35,7 +35,9 @@ jobs:
 
               sudo wget https://github.com/${{ github.actor }}/${{ github.event.repository.name }}/blob/master/Dockerfile /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
               echo "download Dockerfile"
+              cat /home/${{ secrets.AWS_INSTANCE_USER }}/${{ github.event.repository.name }}/Dockerfile
 
+              
               #docker container stop container_${{ github.event.repository.name }} 
               #echo "stop container"
               #docker kill container_${{ github.event.repository.name }} 
